# moiami

./: main.py  pyproject.toml
src/api/v1/: urls.py
src/api/v1/catalog/: views.py
src/apps/actions/: models.py
src/apps/catalog/: models.py
src/apps/subscription/: apps.py  models.py
src/apps/users/: models.py
src/apps/watchlist/: models.py
src/config/: settings.py  urls.py
