[project]
name = "moaimi"
version = "0.1.0"
description = "Moaimi cinema"
requires-python = ">=3.12"
dependencies = [
  "django==6.0.2",
  "celery==5.6.2",
  "django-debug-toolbar==6.2.0",
  "gunicorn==25.0.1",
  "psycopg==3.3.2",
  "redis==7.1.0",
  "ruff==0.15.0",
  "setuptools==80.10.2",
  "whitenoise==6.11.0",
  "pytest>=8.4.2",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["I", "SIM"]